# ape

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  tea.yaml
.github/workflows/: ci.yml
data/: bad-item-type.apev2  empty-tag.apev2  invalid-tag-size.apev2  multiple-values.apev2
src/: error.rs  item.rs  lib.rs  meta.rs  tag.rs  util.rs
