[package]
name = "ape"
version = "0.2.0"

description = "A library for reading and writing APEv2 tags"
keywords = ["ape"]
authors = ["Kilte Leichnam <nwotnbm@gmail.com>", "Ross Nomann <rossnomann@protonmail.com>"]

documentation = "https://docs.rs/ape/"
repository = "https://github.com/rossnomann/rust-ape"

readme = "README.md"
license = "MIT"

exclude = ["data/*"]

[dependencies]
byteorder = "1.3"
