[package]
name = "ape"
version = "0.6.0"
edition = "2024"
description = "A library for reading and writing APEv2 tags"
keywords = ["ape"]
authors = ["Kilte Leichnam <nwotnbm@gmail.com>", "Ross Nomann <rossnomann@protonmail.com>"]
documentation = "https://docs.rs/ape/"
repository = "https://github.com/rossnomann/ape"
readme = "README.md"
license = "MIT"
exclude = ["data/*"]

[dependencies]
byteorder = "1.5"
